--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 25px;
 }
 
 .card {
-  width: 400px;
+  width: 500px;
   background: #fff;
   margin: 16px auto;
+  padding:16px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 25px;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 10px
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 10px;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
   background: white;
+  font-size: 25px;
   border: 1px solid #eee;
+  padding: 10px;
+  
 }
