--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,16 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.plants{
+  display: flex;
+  justify-content: center;
+  gap: 50px
+}
+
+.plant-card {
+  max-width: 200px;
 }
 
 img {
@@ -10,6 +21,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  align-items: center;
 }
 
 /* do not edit this footer */
